alteração banco
