# java/server/src-gen/main/resources/my_domain_my_service.public.swagger.yaml
@@ -337,7 +337,6 @@ definitions:
     type: object
     required:
       - nome
-      - lotacaoMaxima
       - dataHora
       - endereco
     properties:
@@ -349,12 +348,6 @@ definitions:
         type: string
         maxLength: 30
         description: "Nome do evento"
-      lotacaoMaxima:
-        type: integer
-        format: int64
-        description: "Lotação máxima do evento"
-        minimum: 1
-        maximum: 99999
       dataHora:
         type: string
         format: date-time
